WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309683
discord.com: copy paste post with emojis into gmail.com are not display correctly
https://bugs.webkit.org/show_bug.cgi?id=309683
Summary
discord.com: copy paste post with emojis into gmail.com are not display corre...
joanne_pan2
Reported
2026-03-11 09:38:43 PDT
Summary: On discord.com, copy paste post with emojis into gmail.com are not display correctly Steps: 1. Login on discord.com 2. Go to a channel and find some post with text and emojis 3. Copy and go to gmail.com -> compose 4. Paste into body and emojis are not displayed correctly.
Attachments
Add attachment
proposed patch, testcase, etc.
joanne_pan2
Comment 1
2026-03-11 09:39:02 PDT
<
rdar://162708499
>
joanne_pan2
Comment 2
2026-03-11 09:57:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60372
joanne_pan2
Comment 3
2026-03-12 15:33:46 PDT
When emoji are copied from Discord and pasted into Gmail, they appear broken because WebKit does not yet support sanitized copy/paste of SVG data. This is a targeted workaround, and the broader underlying issue is tracked in
rdar://137553836
.
joanne_pan2
Comment 4
2026-03-12 15:58:19 PDT
https://bugs.webkit.org/show_bug.cgi?id=280726
EWS
Comment 5
2026-03-12 20:10:06 PDT
Committed
309176@main
(6c20a2905786): <
https://commits.webkit.org/309176@main
> Reviewed commits have been landed. Closing PR #60372 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug